  (Greta Yorsh and Vincent Laviron, review by Xavier Leroy)

- #8707: Simplif: more regular treatment of Tupled and Curried functions
  (Gabriel Scherer, review by Leo White and Alain Frisch)

- #8526: Add compile-time option -function-sections in ocamlopt to emit
  each function in a separate named text section on supported targets.
  (Greta Yorsh, review by Pierre Chambart)

### Runtime system:

- #8619: Ensure Gc.minor_words remains accurate after a GC.
  (Stephen Dolan, Xavier Leroy and David Allsopp,
   review by Xavier Leroy and Gabriel Scherer)

* #8711: The major GC hooks are no longer allowed to interact with the
   OCaml heap.
   (Jacques-Henri Jourdan, review by Damien Doligez)

- #8691: Allocation functions are now guaranteed not to trigger any
   OCaml callback when called from C.
   (Jacques-Henri Jourdan, review by Stephen Dolan and Gabriel Scherer)

- #8630: Use abort() instead of exit(2) in caml_fatal_error, and add
  the new hook caml_fatal_error_hook.
  (Jacques-Henri Jourdan, review by Xavier Leroy)

### Tools:

* #6792, #8654 ocamldebug now supports program using Dynlink. This
   breaks compatibility with emacs modes.
   (Whitequark and Jacques-Henri Jourdan, review by Gabriel Scherer
    and Xavier Clerc)

### Standard library:

- #8657: Optimization in [Array.make] when initializing with unboxed
   or young values.
   (Jacques-Henri Jourdan, review by Gabriel Scherer and Stephen Dolan)

- #8634: Statistical memory profiling provided by the Gc.Memprof
   module.
   Incomplete version: does not sample
     - objects allocated in the minor heap in native mode,
     - objects allocated by de-marshalling.
   (Jacques-Henri Jourdan, review by Stephen Dolan, Gabriel Scherer and
    Damien Doligez)

- #7672, #1492: Add `Filename.quote_command` to produce properly-quoted
  commands for execution by Sys.command.
  (Xavier Leroy, review by David Allsopp and Damien Doligez)

- #8716: Optimize [Array.fill] and [Hashtbl.clear] with a new runtime primitive