@@ -4,6 +4,7 @@ catch-try.cmm
 catch-float.cmm
 catch-multiple.cmm
 catch-try-float.cmm
+catch-rec-deadhandler.cmm
 checkbound.cmm
 even-odd-spill.cmm
 even-odd-spill-float.cmm
